# To_Do_List

./: .env  Cargo.toml
src/: db.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/dtos/: mod.rs  task_dto.rs  user_dto.rs
src/handlers/: mod.rs  task_handler.rs  user_handler.rs
src/models/: task.rs  user.rs
src/routes/: mod.rs
src/utils/: errors.rs  mod.rs  result_ext.rs
